--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="" dir="ltr">
+<html dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>html</title>
+    <title>kodarit 2019</title>
+    <script src="./app.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./master.css">
   </head>
   <body>
-
+    <div id="screensaver">
+      <h1>FULLSACK</h1>
+    </div>
   </body>
 </html>
