--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>kodarit 2019</title>
+    <script src="./geolocation.js" charset="utf-8"></script>
     <script src="./app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="./master.css">
   </head>
   <body>
-    <div id="screensaver">
-      <h1>FULLSACK</h1>
+    <div class="titudes">
+      <p>latitude</p>
+      <p id="latitude">0</p>
+      <p>longtitude</p>
+      <p id="longtitude">0</p>
     </div>
   </body>
 </html>
