responsive this is not

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./master.css">
   </head>
   <body>
+
     <div class="titudes">
       <div class="latitude">
         <p>latitude</p>
@@ -20,6 +21,9 @@
       </div>
     </div>
     <div class="map" id="map">
+
+    </div>
+    <div class="background">
 
     </div>
   </body>
