--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
   <body>
 
     <div class="titudes">
-      <div class="latitude">
+      <div class="latitude black-trans">
         <p>latitude</p>
         <p id="latitude">0</p>
       </div>
-      <div class="longitude">
+      <div class="longitude black-trans">
         <p>longitude</p>
         <p id="longitude">0</p>
       </div>
@@ -25,9 +25,13 @@
     <div class="map" id="map">
 
     </div>
-    <div class="background">
-
-    </div>
+    <div class="background"></div>
+    <form class="form">
+      <input type="text" class="form-control" placeholder="Place Name">
+      <input type="text" class="form-control" placeholder="Rating and Review">
+      <button type="button" name="button" class="btn black-trans">Save</button>
+      <button type="button" name="button" class="btn black-trans">Cancel</button>
+    </form>
   </body>
   <script src="./geolocation.js" charset="utf-8"></script>
   <script src="./app.js" charset="utf-8"></script>
