--- a/public/index.html
+++ b/public/index.html
@@ -28,18 +28,44 @@
 
     <div class="row">
       <div class="col-sm-6">
-        <button type="button" name="button" class="btn black-trans bluetext" id="savelocation" onclick="openLocationForm()">Save Location</button>
-        <div class="popup" id="placerating">
-          <form class="form" id="placerating-form">
-            <input type="text" class="form-control" placeholder="Place Name" id="place">
-            <input type="text" class="form-control" placeholder="Rating and Review" id="review">
-            <button type="button" name="button" class="btn black-trans bluetext" onclick="savelocation()">Save</button>
-            <button type="button" name="button" class="btn black-trans bluetext" onclick="cancelLocationSave()">Cancel</button>
-          </form>
+        <div class="wrapper">
+          <button type="button" name="button" class="btn black-trans bluetext" id="savelocation" onclick="openLocationForm()">Save Location</button>
+          <div class="popup" id="placerating">
+            <form class="form" id="placerating-form">
+              <input type="text" class="form-control" placeholder="Place Name" id="place">
+              <input type="text" class="form-control" placeholder="Rating and Review" id="review">
+              <button type="button" name="button" class="btn black-trans bluetext" onclick="savelocation()">Save</button>
+              <button type="button" name="button" class="btn black-trans bluetext" onclick="cancelLocationSave()">Cancel</button>
+            </form>
+          </div>
         </div>
+
       </div>
       <div class="col-sm-6">
-        -hoo
+        <table class="table table-dark">
+          <thead>
+            <tr>
+              <th scope="col">Place</th>
+              <th scope="col">Rating</th>
+              <th scope="col">Position</th>
+            </tr>
+          </thead>
+          <tbody id="places-table">
+            <!--
+            <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          -->
+            <tr>
+              <td>death valley</td>
+              <td>5 stars</td>
+              <td>idk 92183912-0298</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </body>
