--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
             <tr>
               <td>death valley</td>
               <td>5 stars</td>
-              <td>idk 92183912-0298</td>
+              <td>undefined</td>
             </tr>
           </tbody>
         </table>
