--- a/public/index.html
+++ b/public/index.html
@@ -42,28 +42,20 @@
 
       </div>
       <div class="col-sm-6">
-        <table class="table table-dark">
+        <table class="places-table">
           <thead>
             <tr>
               <th scope="col">Place</th>
               <th scope="col">Rating</th>
-              <th scope="col">Position</th>
             </tr>
           </thead>
           <tbody id="places-table">
             <!--
-            <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          -->
-            <tr>
-              <td>death valley</td>
-              <td>5 stars</td>
-              <td>undefined</td>
-            </tr>
+              <tr>
+                <td>death valley</td>
+                <td>5 stars</td>
+              </tr>
+            -->
           </tbody>
         </table>
       </div>
