--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
           <div class="popup" id="placerating">
             <form class="form" id="placerating-form">
               <input type="text" class="form-control" placeholder="Place Name" id="place">
-              <input type="text" class="form-control" placeholder="Rating (Stars, 1-5)" id="review">
+              <input type="text" class="form-control" placeholder="Rating (Stars, 1 - 5)" id="review">
               <button type="button" name="button" class="btn black-trans bluetext" onclick="savelocation()">Save</button>
               <button type="button" name="button" class="btn black-trans bluetext" onclick="cancelLocationSave()">Cancel</button>
             </form>
